@@ -1,3 +1,11 @@
+2018-08-07 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix theme warning with gtk version < 3.20
+	* Fix long numbers in RPN operation parse result
+	* Fix separator for last history item
+	* Remove function parsing hint for "to" expression
+	* Allow conversion of the current result using standalone "to" expression (e.g. type "to m" to convert current result to meter)
+
 2018-07-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* More fine-grained completion settings in preferences dialog
